[package]
name = "kernel"
version = "0.1.0"
authors = ["genms"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.1"
#log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_debug"] }
cstr_core = { version = "0.2.3", default-features = false }
cty = "0.2.1"
modular-bitfield = "0.11.2"
arrayvec = { version = "0.7.0", default-features = false }
